--- a/esmvaltool/recipes/recipe_hyint.yml
+++ b/esmvaltool/recipes/recipe_hyint.yml
@@ -20,6 +20,7 @@ datasets:
 #  - {dataset: ACCESS1-0,      project: CMIP5, exp: [historical, rcp85], ensemble: r1i1p1, start_year: 2004, end_year: 2010}
 # - {dataset: ACCESS1-3,      project: CMIP5, exp: [historical, rcp85], ensemble: r1i1p1, start_year: 2004, end_year: 2010}
   - {dataset: ACCESS1-0,      project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2006, end_year: 2016}
+  - {dataset: MPI-ESM-MR,      project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2006, end_year: 2016}
 
 preprocessors:
   preproc:
@@ -46,9 +47,9 @@ diagnostics:
         norm_years: [2006,2009]
         # Select type of plot:
         # 1) lon/lat maps per individual field/exp/multi-year mean
-        # 2) lon/lat maps per individual field exp-ref-diff/multi-year mean
+        # 2) lon/lat maps per individual field/exp-ref-diff/multi-year mean
         # 3) lon/lat maps multi-field/exp-ref-diff/multi-year mean
-        # 4) lon/lat maps multifield/exp/multiyear
+        # 4) lon/lat maps multifield/exp/multiyear - skipped if using multi-year mean
         # 11) timeseries over required individual region/exp
         # 12) timeseries over multiple regions/exp
         # 13) timeseries with multiple models
