Changed file header to match new file names.

--- a/esmvaltool/recipes/recipe_ocean_amoc.yml
+++ b/esmvaltool/recipes/recipe_ocean_amoc.yml
@@ -1,5 +1,5 @@
 ###############################################################################
-# recipe_amoc.yml
+# recipe_ocean_amoc.yml
 
 documentation:
   description:
