--- a/esmvaltool/recipes/recipe_ocean_example.yml
+++ b/esmvaltool/recipes/recipe_ocean_example.yml
@@ -1,5 +1,5 @@
 ###############################################################################
-# recipe_OceanPhysics.yml
+# recipe_ocean_example.yml
 ---
 documentation:
   description: |
