--- a/esmvaltool/recipes/recipe_ocean_ice_extent.yml
+++ b/esmvaltool/recipes/recipe_ocean_ice_extent.yml
@@ -1,5 +1,5 @@
 ###############################################################################
-# recipe_SeaIce.yml
+# recipe_ocean_ice_extent.yml
 ---
 documentation:
   description: |
