--- a/esmvaltool/recipes/recipe_ocean_quadmap.yml
+++ b/esmvaltool/recipes/recipe_ocean_quadmap.yml
@@ -1,5 +1,5 @@
 ###############################################################################
-# recipe_OceanQuadMap.yml
+# recipe_ocean_quadmap.yml
 ---
 documentation:
   description: |
