--- a/esmvaltool/recipes/recipe_ocean_scalar_fields.yml
+++ b/esmvaltool/recipes/recipe_ocean_scalar_fields.yml
@@ -1,5 +1,5 @@
 ###############################################################################
-# recipe_scarlar_fields.yml
+# recipe_ocean_scarlar_fields.yml
 ---
 documentation:
   description: |
